--- a/User Service/src/main/resources/application.yml
+++ b/User Service/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
   jpa:
     generate-ddl: false
     show-sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  cache:
+    type: redis
