--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
         run: chmod +x "User Service/gradlew"
 
       - name: Build
-        run: "User Service/gradlew build --no-daemon"
+        run: "./User Service/gradlew build --no-daemon"
