fix(ci): correct worlflow/ci.yml patr_7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Permission to execute gradlew
-        run: chmod +x "User Service/gradlew"
+        run: chmod +x ./gradlew
 
       - name: Build
         run: ./gradlew build --no-daemon
