--- a/User Service/docker-compose.yml
+++ b/User Service/docker-compose.yml
@@ -1,6 +1,20 @@
 version: "3.8"
 
 services:
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/user_service_db_docker
+      SPRING_DATASOURCE_USERNAME: my_name_docker
+      SPRING_DATASOURCE_PASSWORD: my_password_docker
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
+    depends_on:
+      - postgres
+      - redis
+
   postgres:
     image: postgres:16.1
     environment:
@@ -13,3 +27,4 @@ services:
     image: redis:8.2
     ports:
       - "6379:6379"
+
