--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Code Analysis
         uses: SonarSource/sonarcloud-github-action@v2  
+        with:
+          projectBaseDir: ./User Service
         env:
           SONAR_TOKEN: ${{ secrets.MySonarToken }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
