--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,11 @@ jobs:
       - name: Code Analysis
         uses: SonarSource/sonarcloud-github-action@v2  
         with:
-          projectBaseDir: ./User\ Service
+          args: >
+            -Dsonar.projectKey=birulazena_Yauheni-Birulia-Practical-Course
+            -Dsonar.organization=777huvak
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.java.binaries=build/classes
         env:
           SONAR_TOKEN: ${{ secrets.MySonarToken }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
