feat(ci) add docker image and fix code analysis

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,10 @@ jobs:
       - name: Code Analysis
         uses: SonarSource/sonarcloud-github-action@v2  
         with:
-          args: >
-            -Dsonar.projectKey=birulazena_Yauheni-Birulia-Practical-Course
-            -Dsonar.organization=777huvak
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.java.binaries=User_Service/build/classes/java/main
+          projectBaseDir: ./User_Service
         env:
           SONAR_TOKEN: ${{ secrets.MySonarToken }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Artifact Creation(docker image)
+        run: docker build -t user-service .
